# TaskManagerProject

./: .gitignore  404.html  README.md  elt_compteformation.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_spider.py  schema.md  schema_bis.md  schema_lineage_compteformation.md  schema_technico_logique.md  search.html  terraform.tfstate  test_cf  test_cf.ipynb  test_formationspider.py  testjson.json
api/introduction/: index.html
compteformation/: elt_compteformation.py  test_cf  test_cf.ipynb  test_cf2  test_cf_rncp  test_cf_rs
docs/: index.md
docs/api/: introduction.md
docs/scraping/: introduction.md  models.md
formationscraper/: Dockerfile  README.md  certifs.csv  formations.csv  function_app.py  main.py  main.tf  plan.tfplan  pyproject.toml  requirements.txt  sessions.csv  terraform.tfstate  variables.tf
formationscraper/formationscraper/: database.db  items.py  middlewares.py  models.py  pipelines.py  settings.py
formationscraper/formationscraper/api/endpoints/: __init__.py  main.py
formationscraper/formationscraper/compteformation/: elt_compteformation.py  test_cf.ipynb  test_cf_rs
formationscraper/formationscraper/core/: config.py
formationscraper/formationscraper/db/: models.py  session.py
formationscraper/formationscraper/schemas/: __init__.py  main.py
formationscraper/formationscraper/spiders/: formationspider.py
formationscraper/terra/: main.tf  variables.tf
search/: search_index.json
site/: index.html  objects.inv  requirements.txt
terra/: function_app.py  main.tf  main2.txt  terraform.tfvars  variables.tf
(+3 files in other folders)
