[tool.poetry]
name = "taskmanagerproject"
version = "0.1.0"
description = ""
authors = ["Serge Buasa <sergebuasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.2.2"
scrapy = "^2.11.2"
dateparser = "^1.2.0"
pyopenssl = "^24.2.1"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
python-dateutil = "^2.9.0.post0"
pydantic-settings = "^2.3.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
